--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "accepts": "^1.3.5",
     "autoprefixer": "^9.3.1",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "content-disposition": "^0.5.2",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
@@ -20,21 +21,21 @@
     "font-awesome": "^4.7.0",
     "fresh": "^0.5.2",
     "jquery": "^3.3.1",
-    "methods": "^1.1.2",
     "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
     "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
     "node-sass": "^4.10.0",
-    "popper.js": "^1.14.4",
     "popper": "^1.0.1",
+    "popper.js": "^1.14.4",
     "postcss-loader": "^3.0.0",
     "proxy-addr": "^2.0.4",
     "range-parser": "^1.2.0",
     "safe-buffer": "^5.1.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "vary": "^1.1.2",
     "utils-merge": "^1.0.1",
-    "bootstrap": "^4.1.3"
+    "vary": "^1.1.2"
   },
   "devDependencies": {},
   "repository": {
