--- a/lambda/package.json
+++ b/lambda/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "uid-generator": "^1.0.0"
   },
   "keywords": [],
   "author": "",
